crates/fastclaw-cli/src/tui/snapshots/fastclaw__tui__tests__input_with_text.snap
---
source: crates/fastclaw-cli/src/tui/mod.rs
expression: terminal.backend().to_string()
---
"────────────────────────────────────────────────────────────────────────────────"
"❯ hello world                                                                   "
"                                                                                "
