crates/fastclaw-cli/src/tui/snapshots/fastclaw__tui__tests__messages_mixed.snap
---
source: crates/fastclaw-cli/src/tui/mod.rs
expression: terminal.backend().to_string()
---
" ❯  10:00:00                                                                    "
"   Hello                                                                        "
"                                                                                "
"  ⎿ Hi there! How can I help?                                                   "
"                                                                                "
"    Session started                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
