crates/fastclaw-cli/src/tui/snapshots/fastclaw__tui__tests__popup_help.snap
---
source: crates/fastclaw-cli/src/tui/mod.rs
expression: terminal.backend().to_string()
---
"                                                                                "
"                                                                                "
"            ┌ Help ────────────────────────────────────────────────┐            "
"            │ FastClaw Help                                        │            "
"            │                                                      │            "
"            │ Keyboard Shortcuts                                   │            "
"            │  Ctrl+C                Quit                          │            "
"            │  Ctrl+L                Clear + new session           │            "
"            │  Esc                   Cancel stream / 2x clear input│            "
"            │  Shift+Tab             Toggle Plan/Agent mode        │            "
"            │  Enter                 Send message                  │            "
"            │  Shift+Enter           Newline (multi-line)          │            "
"            │  Tab                   Auto-complete commands        │            "
"            │  Ctrl+R                History search                │            "
"            │  Ctrl+W                Delete word                   │            "
"            │  ↑/↓                   History navigation            │            "
"            │  Shift+↑↓ / PgUp/Dn    Scroll messages               │            "
"            │                                                      │            "
"            │ Session                                              │            "
"            │  /clear        Clear history and free up context     │            "
"            │  /resume       Resume a previous conversation        │            "
"            └──────────────────────────────────────────────────────┘            "
"                                                                                "
"                                                                                "
