crates/fastclaw-cli/src/tui/snapshots/fastclaw__tui__tests__status_bar_agent.snap
---
source: crates/fastclaw-cli/src/tui/mod.rs
expression: terminal.backend().to_string()
---
" │ agent  ? help                                                                                    "
