crates/fastclaw-cli/src/tui/snapshots/fastclaw__tui__tests__title_bar.snap
---
source: crates/fastclaw-cli/src/tui/mod.rs
expression: terminal.backend().to_string()
---
" FastClaw ●  default  sess-abc                                                  "
